--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 /*
     *****************
-    DONE BY:-   TUMMALA KETHAN
+    DONE BY:-   DIVAKER SINGH
     *****************
 */
 
@@ -194,6 +194,6 @@ section
 
 /*
     *****************
-    DONE BY:-   TUMMALA KETHAN
+    DONE BY:-   DIVAKER SINGH
     *****************
 */
